<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_more_background">

    <TextView
        android:id="@+id/tv_music"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="start"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        tools:text="告白气球" />

    <View
        android:id="@+id/divider"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_05"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_music" />

    <HorizontalScrollView
        android:id="@+id/hl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_10"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_next"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_next_play"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/next_to_play"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_next"
                    app:layout_constraintStart_toStartOf="@+id/iv_next"
                    app:layout_constraintTop_toBottomOf="@+id/iv_next" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_add"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/add_to_queue"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_add"
                    app:layout_constraintStart_toStartOf="@+id/iv_add"
                    app:layout_constraintTop_toBottomOf="@+id/iv_add" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_download"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_download1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/download"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_download"
                    app:layout_constraintStart_toStartOf="@+id/iv_download"
                    app:layout_constraintTop_toBottomOf="@+id/iv_download" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_share1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/share"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_share"
                    app:layout_constraintStart_toStartOf="@+id/iv_share"
                    app:layout_constraintTop_toBottomOf="@+id/iv_share" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_singer"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_singer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/sing_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_singer"
                    app:layout_constraintStart_toStartOf="@+id/iv_singer"
                    app:layout_constraintTop_toBottomOf="@+id/iv_singer" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_album"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_10"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_album"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/dialog_more_icon_selector"
                    android:contentDescription="@null"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_album"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:gravity="center"
                    android:text="@string/album_info"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/iv_album"
                    app:layout_constraintStart_toStartOf="@+id/iv_album"
                    app:layout_constraintTop_toBottomOf="@+id/iv_album" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:id="@+id/divider1"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_05"
        android:layout_marginTop="@dimen/dp_20"
        android:background="#80FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hl" />

    <TextView
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/close"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

</androidx.constraintlayout.widget.ConstraintLayout>